# debug-platform

./: .env.example  .gitignore  Makefile  README.md  VALIDATION.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py  migrations.py  security.py  utils.py
backend/app/migrations/: README.md  env.py
backend/app/migrations/versions/: 0001_baseline_schema.py  0002_runtime_integrity.py  0003_analysis_model_snapshot.py  0004_atomic_parse_runs.py  0005_audit_events.py  0006_rbac.py
backend/app/seed_knowledge/: c_security_debug.md  gw_wan_debug.md  pon_omci_tr069.md  wifi_ap_debug.md
backend/app/services/: access_control.py  archive.py  audit.py  backup.py  code_index.py  diagnosis.py  events.py  health.py  jobs.py  knowledge.py  knowledge_taxonomy.py  llm.py  log_parsers.py  model_profiles.py  parse_service.py  parser_registry.py  rag.py  report.py  retrieval_models.py  secrets.py  static_tools.py  storage.py  text_files.py  vector_store.py
backend/app/templates/: report.html.j2
backend/tests/: test_access_control.py  test_analysis_model_snapshot.py  test_archive.py  test_audit.py  test_backup.py  test_case_deletion.py  test_case_isolation.py  test_config_paths.py  test_database_integrity.py  test_deployment_files.py  test_diagnosis_failure_state.py  test_diagnosis_llm_validation.py  test_event_api.py  test_external_services.py  test_health.py  test_inspect_script.py  test_jobs.py  test_large_huawei_log.py  test_local_startup_scripts.py  test_migrations.py  test_model_installer.py  test_model_profiles.py  test_parse_service.py  test_parser.py  test_parser_registration.py  test_rag.py  test_security_api.py  test_storage.py  test_system_api.py  test_text_files.py  test_upload.py
docs/: model-and-knowledge-configuration.md  project-architecture-and-evolution.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: backup_local.bat  backup_local.py  bootstrap_local.bat  check_hf_model_access.bat  check_hf_model_access.ps1  doctor_local.bat  doctor_local.ps1  download_local_models.py  hf_model_tools.ps1  inspect_log_file.bat  inspect_log_file.ps1  install_local_models.bat  install_local_models.ps1  manage_users.bat  manage_users.py  restore_local.bat  (+8 more)
(+28 files in other folders)
