[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gw-ap-debug-backend"
version = "0.1.0"
description = "GW/AP collectDebuginfo intelligent diagnosis platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "sqlalchemy>=2.0.41,<3.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "jinja2>=3.1.6,<4.0",
  "openai>=1.95,<2.0",
  "httpx>=0.28,<1.0",
  "reportlab>=4.4,<5.0",
  "python-docx>=1.2,<2.0",
  "scikit-learn>=1.7,<2.0",
  "qdrant-client>=1.14,<2.0",
  "charset-normalizer>=3.4,<4.0",
  "python-dateutil>=2.9,<3.0",
  "pyyaml>=6.0.2,<7.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.0,<2.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
